# UGR-DS

./: .gitignore  CalculadoraExtremos.java  Notas.java  ProyectoDS.vpp  ProyectoDS.vpp.bak_000f  ProyectoDS.vpp.bak_001d  README.md
P1/P1S3/cpp/: CMakeLists.txt
P1/P1S3/cpp/src/: FiltroTeoria.cpp  Nota.cpp  main.cpp
P1S1/: DiagramaClases.vpp  DiagramaClasesReverse.vpp
P1S2/: DiagramaClasesReverseJava.vpp  DiagramaClasesReverseRuby.vpp
P1S2_Java/: DiagramaClasesReverse.vpp
P1S2_Ruby/: aula.rb  aula_teoria.rb  docencia.rb  factoria_docencia.rb  grupo.rb  grupo_practicas.rb  grupo_teoria.rb  main.rb  ordenador.rb
P1S3/: CMakeLists.txt  CadenaFiltros.cpp  CadenaFiltros.h  DiagramaClasesReverseCpp.vpp  DiagramaClasesReverseDart.vpp  Filtro.h  FiltroPracticas.cpp  FiltroPracticas.h  FiltroTeoria.cpp  FiltroTeoria.h  GestorFiltros.cpp  GestorFiltros.h  Nota.h  Notas.cpp  ObjetivoVerNotas.cpp  TipoNota.h  main.cpp
P1S3/cpp/include/: CadenaFiltros.h  Filtro.h  FiltroTeoria.h  GestorFiltros.h
P1S3/cpp/src/: CadenaFiltros.cpp  FiltroPracticas.cpp  GestorFiltros.cpp  Nota.cpp  Notas.cpp  ObjetivoVerNotas.cpp
P1S3/dart/: filtro_teoria.dart  objetivo_ver_notas.dart  tipo_nota.dart
P1S3/include/: FiltroPracticas.h  FiltroTeoria.h  Nota.h  Notas.h  ObjetivoVerNotas.h  TipoNota.h
P1S3_Dart/: cadena_filtros.dart  filtro.dart  filtro_practicas.dart  filtro_teoria.dart  gestor_filtros.dart  main.dart  nota.dart  notas.dart  objetivo_ver_notas.dart
academic_me/: README.md  Test Results - tests_in_exam_test_dart.html  Test Results - tests_in_student_test_dart.html  (+4 more)
(+101 files in other folders)
